// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TWAMM #updateLongTermOrder gas adding 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 43885,
}
`;

exports[`TWAMM #updateLongTermOrder gas no delta 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 30228,
}
`;

exports[`TWAMM #updateLongTermOrder gas subtracting 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 35884,
}
`;
